--- a/BIM/src/main/resources/com/mycompany/bim/administrator.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/administrator.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="panePrimary" prefHeight="768.0" prefWidth="1366.0" stylesheets="@../../../css/administrator.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdministratorController">
+<AnchorPane id="panePrimary" prefHeight="768.0" prefWidth="1366.0" stylesheets="@../../../css/administrator.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdministratorController">
    <children>
       <AnchorPane id="paneSecondary" fx:id="paneMenu" disable="true" layoutX="-355.0" layoutY="15.0" prefHeight="727.0" prefWidth="342.0" stylesheets="@../../../css/administrator.css" visible="false">
          <children>
@@ -218,15 +218,15 @@
             <Button fx:id="btnAddProyect" disable="true" layoutX="150.0" layoutY="635.0" mnemonicParsing="false" onAction="#clickAddProyect" prefHeight="45.0" prefWidth="410.0" styleClass="buttonBlue" text="Add" visible="false" />
             <Button fx:id="btnModifyProyect" disable="true" layoutX="150.0" layoutY="635.0" mnemonicParsing="false" onAction="#clickModifyProyect" prefHeight="45.0" prefWidth="410.0" styleClass="buttonBlue" text="Modify" visible="false" />
             <Button fx:id="btnDeleteProyect" disable="true" layoutX="150.0" layoutY="635.0" mnemonicParsing="false" onAction="#clcikDeleteProyect" prefHeight="45.0" prefWidth="410.0" styleClass="buttonBlue" text="Delete" visible="false" />
-            <Button fx:id="btnSwitchTables" layoutX="1111.0" layoutY="10.0" mnemonicParsing="false" onAction="#clickSwitchTables" prefHeight="35.0" prefWidth="151.0" styleClass="buttonGreen" text="Switch Table" visible="false">
+            <Button fx:id="btnSwitchTables" layoutX="1111.0" layoutY="10.0" mnemonicParsing="false" onAction="#clickSwitchTables" prefHeight="35.0" prefWidth="151.0" styleClass="buttonGreen" text="Switch Table">
                <graphic>
-                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="25.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../images/arrowReloadWhite.png" />
+                        <Image url="@../../../images/twoArrowsWhite.png" />
                      </image>
                   </ImageView>
                </graphic></Button>
-            <Button fx:id="btnSearchProyect" layoutX="458.0" layoutY="194.0" mnemonicParsing="false" onAction="#clickSearchProyect" text="Search" />
+            <Button fx:id="btnSearchProyect" layoutX="458.0" layoutY="194.0" mnemonicParsing="false" onAction="#clickSearchProyect" styleClass="buttonBlue" text="Search" />
          </children>
       </AnchorPane>
       <AnchorPane id="paneQuaternary" fx:id="paneHome" layoutX="22.0" layoutY="31.0" prefHeight="708.0" prefWidth="1314.0" stylesheets="@../../../css/administrator.css">
