--- a/BIM/src/main/resources/com/mycompany/bim/engineer.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/engineer.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="panePrimary" prefHeight="750.0" prefWidth="1350.0" stylesheets="@../../../css/engineer.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EngineerController">
+<AnchorPane id="panePrimary" prefHeight="750.0" prefWidth="1350.0" stylesheets="@../../../css/engineer.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EngineerController">
    <children>
       <AnchorPane id="paneSecondary" fx:id="paneEngineerOptions" prefHeight="750.0" prefWidth="300.0">
          <children>
@@ -87,7 +87,7 @@
       </AnchorPane>
       <AnchorPane id="paneTertiary" fx:id="paneProyect" layoutX="318.0" layoutY="70.0" prefHeight="610.0" prefWidth="633.0" visible="false">
          <children>
-            <TextField fx:id="txtProyectName" layoutX="229.0" layoutY="107.0" prefHeight="55.0" prefWidth="175.0">
+            <TextField fx:id="txtProyectName" layoutX="348.0" layoutY="106.0" prefHeight="55.0" prefWidth="175.0">
                <font>
                   <Font size="24.0" />
                </font>
@@ -98,18 +98,18 @@
                </font>
             </Label>
             <DatePicker fx:id="dateStartProyect" layoutX="111.0" layoutY="376.0" prefHeight="55.0" prefWidth="175.0" />
-            <TextField fx:id="txtProyectEngineer" layoutX="111.0" layoutY="238.0" prefHeight="55.0" prefWidth="175.0">
+            <TextField fx:id="txtProyectEngineer" editable="false" layoutX="111.0" layoutY="238.0" prefHeight="55.0" prefWidth="175.0">
                <font>
                   <Font size="24.0" />
                </font>
             </TextField>
-            <TextField fx:id="txtProyectDesigner" layoutX="348.0" layoutY="238.0" prefHeight="55.0" prefWidth="175.0">
+            <TextField fx:id="txtProyectDesigner" editable="false" layoutX="348.0" layoutY="238.0" prefHeight="55.0" prefWidth="175.0">
                <font>
                   <Font size="24.0" />
                </font>
             </TextField>
             <DatePicker fx:id="dateEndProyect" layoutX="348.0" layoutY="376.0" prefHeight="55.0" prefWidth="175.0" />
-            <Label layoutX="229.0" layoutY="76.0" text="Name:">
+            <Label layoutX="348.0" layoutY="76.0" text="Name:">
                <font>
                   <Font size="20.0" />
                </font>
@@ -136,6 +136,16 @@
             </Label>
             <Button fx:id="btnProyectProcess" layoutX="544.0" layoutY="552.0" mnemonicParsing="false" onAction="#clickProyectProcess" prefHeight="44.0" prefWidth="76.0" styleClass="buttonGreen" text="Next" />
             <Button fx:id="btnDoNotCreate1" layoutX="424.0" layoutY="552.0" mnemonicParsing="false" onAction="#clickDoNotCreate" prefHeight="44.0" prefWidth="112.0" styleClass="buttonRed" text="Don't create" />
+            <TextField fx:id="txtProyectCode" layoutX="111.0" layoutY="106.0" prefHeight="55.0" prefWidth="175.0">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </TextField>
+            <Label layoutX="109.0" layoutY="76.0" text="Code:">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
       <AnchorPane id="paneTertiary" fx:id="paneMaterial" layoutX="318.0" layoutY="70.0" prefHeight="610.0" prefWidth="633.0" visible="false">
@@ -358,19 +368,28 @@
       <Button fx:id="btnExit" layoutX="1252.0" layoutY="14.0" mnemonicParsing="false" onAction="#clickExit" prefHeight="44.0" prefWidth="76.0" styleClass="buttonRed" text="Exit" />
       <AnchorPane fx:id="paneProyectList" layoutX="970.0" layoutY="66.0" prefHeight="618.0" prefWidth="372.0">
          <children>
-            <TableView fx:id="tbvProyectList" layoutX="10.0" layoutY="43.0" prefHeight="549.0" prefWidth="352.0">
+            <TableView fx:id="tbvProyectList" layoutX="10.0" layoutY="43.0" onMouseClicked="#clickGetProyectCode" prefHeight="549.0" prefWidth="352.0">
               <columns>
                 <TableColumn fx:id="columnProyectName" prefWidth="111.20001220703125" text="Name" />
-                  <TableColumn fx:id="columnProyectEngineer" prefWidth="74.4000244140625" text="Engineer" />
-                  <TableColumn fx:id="columnProyectDesigner" prefWidth="70.4000244140625" text="Designer" />
+                  <TableColumn fx:id="columnProyectCode" prefWidth="74.4000244140625" text="Code" />
+                  <TableColumn fx:id="columnProyectStartDate" prefWidth="70.4000244140625" text="Start Date" />
                 <TableColumn fx:id="columnProyectEndDate" prefWidth="92.800048828125" text="End date" />
               </columns>
             </TableView>
-            <Label layoutX="120.0" layoutY="7.0" text="Proyect List">
+            <Label layoutX="54.0" layoutY="7.0" text="Proyect List">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
+            <Button fx:id="btnSwitchTblv" layoutX="283.0" layoutY="12.0" mnemonicParsing="false" onAction="#clikSwitchTblv" text="-&gt;" />
+            <TableView fx:id="tblvUserList" disable="true" layoutX="10.0" layoutY="43.0" onMouseClicked="#clickGetUserId" prefHeight="549.0" prefWidth="352.0" visible="false">
+               <columns>
+                  <TableColumn fx:id="columnUserId" prefWidth="112.0" text="Identification" />
+                  <TableColumn fx:id="columnUserName" prefWidth="83.0" text="Name" />
+                  <TableColumn fx:id="columnUserRole" prefWidth="82.0" text="Role" />
+                  <TableColumn fx:id="columnUserStatus" prefWidth="74.0" text="Status" />
+               </columns>
+            </TableView>
          </children>
       </AnchorPane>
       <AnchorPane id="paneTertiary" fx:id="paneReport" layoutX="318.0" layoutY="85.0" prefHeight="635.0" prefWidth="1015.0" visible="false">
