--- a/BIM/src/main/resources/com/mycompany/bim/designer.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/designer.fxml
@@ -295,7 +295,7 @@
       <Line endX="60.4000244140625" endY="-1.9073486328125E-6" layoutX="486.0" layoutY="14.0" startX="-100.0" stroke="WHITE" />
       <AnchorPane id="paneSecondary" fx:id="paneProyectList" layoutX="-414.0" prefHeight="750.0" prefWidth="414.0">
          <children>
-            <TableView fx:id="tbvProyectList" focusTraversable="false" layoutX="31.0" layoutY="116.0" onMouseClicked="#clickGetCode" prefHeight="549.0" prefWidth="352.0">
+            <TableView fx:id="tbvProyectList" focusTraversable="false" layoutX="31.0" layoutY="116.0" prefHeight="549.0" prefWidth="352.0">
                <columns>
                   <TableColumn fx:id="columnProyectName" prefWidth="111.20001220703125" text="Name" />
                   <TableColumn fx:id="columnProyectCode" prefWidth="74.4000244140625" text="Code" />
