--- a/BIM/src/main/resources/com/mycompany/bim/engineer.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/engineer.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -11,6 +10,8 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="panePrimary" prefHeight="750.0" prefWidth="1350.0" stylesheets="@../../../css/engineer.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EngineerController">
@@ -375,7 +376,94 @@
       </AnchorPane>
       <AnchorPane id="paneTertiary" fx:id="paneReport" layoutX="318.0" layoutY="85.0" prefHeight="635.0" prefWidth="1015.0" visible="false">
          <children>
-            <Canvas height="610.0" layoutX="11.0" layoutY="13.0" width="994.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="610.0" layoutX="11.0" layoutY="13.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" width="993.0" />
+            <Line endX="858.0" endY="7.62939453125E-6" layoutX="128.0" layoutY="30.0" startX="-100.0" strokeWidth="2.0" />
+            <Line endX="-100.0" endY="577.6000366210938" layoutX="1087.0" layoutY="31.0" startX="-100.0" strokeWidth="2.0" />
+            <Line endX="858.0" endY="7.62939453125E-6" layoutX="128.0" layoutY="610.0" startX="-100.0" strokeWidth="2.0" />
+            <Line endX="-100.0" endY="577.6000366210938" layoutX="127.0" layoutY="31.0" startX="-100.0" strokeWidth="2.0" />
+            <Line endX="858.0" endY="7.62939453125E-6" layoutX="128.0" layoutY="397.0" startX="-100.0" strokeWidth="2.0" />
+            <Line endX="-100.0" endY="577.6000366210938" layoutX="429.0" layoutY="30.0" startX="-100.0" startY="368.1999816894531" strokeWidth="2.0" />
+            <Label alignment="CENTER" layoutX="129.0" layoutY="346.0" prefHeight="35.0" prefWidth="250.0" styleClass="labelBlackRegular" text="ARCHITECTURAL PLANT">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="635.0" layoutY="346.0" prefHeight="35.0" prefWidth="250.0" styleClass="labelBlackRegular" text="STRUCTURAL PLANT">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="28.0" layoutY="398.0" prefHeight="35.0" prefWidth="122.0" styleClass="labelBlackRegular" text="CFIA STAMP:">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Line endX="858.0" endY="7.62939453125E-6" layoutX="128.0" layoutY="464.0" startX="201.20001220703125" startY="6.103515625E-5" strokeWidth="2.0" />
+            <Label alignment="CENTER" layoutX="455.0" layoutY="412.0" prefHeight="35.0" prefWidth="344.0" styleClass="labelBlack" text="JRFA-Luxury">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </Label>
+            <Label layoutX="343.0" layoutY="470.0" prefHeight="35.0" prefWidth="82.0" styleClass="labelBlackRegular" text="ENGINEER:">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Line endX="-100.0" endY="577.6000366210938" layoutX="758.0" layoutY="30.0" startX="-100.0" startY="436.20001220703125" strokeWidth="2.0" />
+            <Line endX="858.0" endY="7.62939453125E-6" layoutX="129.0" layoutY="513.0" startX="201.20001220703125" startY="6.103515625E-5" strokeWidth="2.0" />
+            <Label layoutX="668.0" layoutY="470.0" prefHeight="35.0" prefWidth="82.0" styleClass="labelBlackRegular" text="DESIGNER:">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="343.0" layoutY="519.0" prefHeight="35.0" prefWidth="76.0" styleClass="labelBlackRegular" text="PROJECT:">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="671.0" layoutY="519.0" prefHeight="35.0" prefWidth="175.0" styleClass="labelBlackRegular" text="CONSTRUCTION PLAN:">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <Line endX="528.2000122070312" endY="6.103515625E-5" layoutX="129.0" layoutY="560.0" startX="201.20001220703125" startY="6.103515625E-5" strokeWidth="2.0" />
+            <Label layoutX="341.0" layoutY="568.0" prefHeight="35.0" prefWidth="62.0" styleClass="labelBlackRegular" text="DATE:">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="700.0" layoutY="405.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/stars.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="txtPlanEngineer" alignment="CENTER" layoutX="445.0" layoutY="470.0" prefHeight="35.0" prefWidth="200.0" styleClass="labelBlack" text="...">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="txtPlanProyect" alignment="CENTER" layoutX="445.0" layoutY="519.0" prefHeight="35.0" prefWidth="200.0" styleClass="labelBlack" text="...">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="txtPlanDate" alignment="CENTER" layoutX="445.0" layoutY="568.0" prefHeight="35.0" prefWidth="200.0" styleClass="labelBlack" text="...">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="txtPlanDesigner" alignment="CENTER" layoutX="774.0" layoutY="470.0" prefHeight="35.0" prefWidth="200.0" styleClass="labelBlack" text="...">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="txtPlanName" alignment="CENTER" layoutX="725.0" layoutY="568.0" prefHeight="35.0" prefWidth="200.0" styleClass="labelBlack" text="...">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <ImageView fx:id="imvArchitecturalPlant" fitHeight="315.5" fitWidth="454.5" layoutX="27.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="imvStructuralPlant" fitHeight="315.5" fitWidth="454.5" layoutX="533.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </AnchorPane>
    </children>
