--- a/BIM/src/main/resources/com/mycompany/bim/engineer.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/engineer.fxml
@@ -361,7 +361,7 @@
             <Font size="50.0" />
          </font>
       </Label>
-      <Label fx:id="lblEngineerName" alignment="CENTER" layoutX="373.0" layoutY="298.0" prefHeight="74.0" prefWidth="434.0" text="...">
+      <Label fx:id="lblEngineerName" alignment="CENTER" layoutX="373.0" layoutY="298.0" prefHeight="74.0" prefWidth="250.0" text="...">
          <font>
             <Font size="50.0" />
          </font>
@@ -485,5 +485,10 @@
             <ImageView fx:id="imvStructuralPlant" fitHeight="315.5" fitWidth="454.5" layoutX="533.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </AnchorPane>
+      <Label fx:id="lblEngineerLastName" alignment="CENTER" layoutX="655.0" layoutY="298.0" prefHeight="74.0" prefWidth="250.0" text="...">
+         <font>
+            <Font size="50.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
